# yesterwind-zmodem

./: .gitignore  README.md  pyproject.toml  setup.py  test_integration.py  test_xmodem_coverage.py  test_xmodem_e2e.py  test_yesterwind_zmodem.py  test_ymodem_coverage.py  test_zmodem_coverage.py
.github/workflows/: release.yml  test.yml
demo/: README.md  bbs_zmodem.py  download_via_zmodem.py  socket_wrapper.py  upload_via_zmodem.py
docs/: ZMODEM.md
yesterwind_zmodem/: __init__.py  xmodem.py  ymodem.py  zmodem.py
