[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yesterwind-zmodem"
version = "0.1.0"
description = "Pure Python implementation of ZModem, YModem, and XModem"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "City Club Intern Bot", email = "cityclubintern@ehw.io"}
]
keywords = ["xmodem", "ymodem", "zmodem", "file-transfer", "protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/ehwio/yesterwind-zmodem"
"Bug Tracker" = "https://github.com/ehwio/yesterwind-zmodem/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["yesterwind_zmodem*"]